added basic heading

--- a/static/md/18.0_Patterns_Match_the_Structure_of_Values.md
+++ b/static/md/18.0_Patterns_Match_the_Structure_of_Values.md
@@ -8,4 +8,28 @@ class: middle, center
 
 class: left
 
+# Patterns
+
+* A special syntax in Rust for matching against the structure of types, both
+  complex and simple
+
+* Using patterns in conjunction with `match` expressions and other constructs
+  gives you more control over the control flow of a program
+
+It is made up of some combination of:
+
+  * literals
+
+  * destructured arrays, enums, structs, or tuples
+
+  * variables
+
+  * wildcards
+
+  * placeholders
+
+---
+
+class: left
+
 # Summary
