--- a/static/md/18.1_All_the_Places_Patterns_May_be_Used.md
+++ b/static/md/18.1_All_the_Places_Patterns_May_be_Used.md
@@ -8,4 +8,47 @@ class: middle, center
 
 class: left
 
+# match Arms
+
+---
+
+class: left
+
+# Conditional `if let` Expressions
+
+---
+
+class: left
+
+# `while let` Conditional Loops
+
+---
+
+class: left
+
+# `for` Loops
+
+---
+
+class: left
+
+# `let` Statements
+
+---
+
+class: left
+
+# Function Parameters
+
+---
+
+class: left
+
+#
+
+---
+
+class: left
+
 # Summary
+
