--- a/static/md/18.3_All_the_Pattern_Syntax.md
+++ b/static/md/18.3_All_the_Pattern_Syntax.md
@@ -8,5 +8,106 @@ class: middle, center
 
 class: left
 
-# Summary
+# Matching Literals
 
+---
+
+class: left
+
+# Matching Named Variables
+
+---
+
+class: left
+
+# Multiple Patterns
+
+---
+
+class: left
+# Matching Ranges of Values with `...`
+
+
+---
+
+class: left
+
+# Destructuring to Break Apart Values
+
+---
+
+class: left
+
+### Destructuring Structs
+
+---
+
+class: left
+
+### Destructuring Enums
+
+---
+
+class: left
+
+### Destructuring References
+
+---
+
+class: left
+
+### Destructuring Structs and Tuples
+
+---
+
+class: left
+
+# Ignoring Values in a Pattern
+
+---
+
+class: left
+
+### Ignoring an Entire Value with _
+
+---
+
+class: left
+
+# Ignoring Parts of a Value with a Nested _
+
+---
+
+class: left
+
+# Ignoring an Unused Variable by Starting its Name with an Underscore
+
+---
+
+class: left
+
+# Ignoring Remaining Parts of a Value with ..
+
+---
+
+class: left
+
+# ref and ref mut to Create References in Patterns
+
+---
+
+class: left
+
+# Extra Conditionals with Match Guards
+
+---
+
+class: left
+
+# @ Bindings
+
+---
+
+class: left
+
+# Summary
