added basic headings

--- a/static/md/19.1_Unsafe_Rust.md
+++ b/static/md/19.1_Unsafe_Rust.md
@@ -8,4 +8,52 @@ class: middle, center
 
 class: left
 
+# Unsafe Superpowers
+
+---
+
+class: left
+
+# Dereferencing a Raw Pointer
+
+---
+
+class: left
+
+# Calling an Unsafe Function or Method
+
+---
+
+class: left
+
+# Creating a Safe Abstraction Over Unsafe Code
+
+---
+
+class: left
+
+# Using extern Functions to Call External Code
+
+---
+
+class: left
+
+# Accessing or Modifying a Mutable Static Variable
+
+---
+
+class: left
+
+# Implementing an Unsafe Trait
+
+---
+
+class: left
+
+# When to Use Unsafe Code
+
+---
+
+class: left
+
 # Summary
