--- a/static/md/19.2_Advanced_Lifetimes.md
+++ b/static/md/19.2_Advanced_Lifetimes.md
@@ -8,5 +8,23 @@ class: middle, center
 
 class: left
 
+# Lifetime Subtyping Ensures One Lifetime Outlives Another
+
+---
+
+class: left
+
+# Lifetime Bounds on References to Generic Types
+
+---
+
+class: left
+
+# Inference of Trait Object Lifetimes
+
+---
+
+class: left
+
 # Summary
 
