--- a/static/md/19.3_Advanced_Traits.md
+++ b/static/md/19.3_Advanced_Traits.md
@@ -8,4 +8,40 @@ class: middle, center
 
 class: left
 
+# Associated Types Specify Placeholder Types in Trait Definitions
+
+---
+
+class: left
+
+# Associated Types Versus Generics
+
+---
+
+class: left
+
+# Default Generic Type Parameters and Operator Overloading
+
+---
+
+class: left
+
+# Fully Qualified Syntax for Disambiguation: Calling Methods with the Same Name
+
+---
+
+class: left
+
+# Using Supertraits to Require One Trait’s Functionality Within Another Trait
+
+---
+
+class: left
+
+# The Newtype Pattern to Implement External Traits on External Types
+
+---
+
+class: left
+
 # Summary
