--- a/static/md/19.4_Advanced_Types.md
+++ b/static/md/19.4_Advanced_Types.md
@@ -8,4 +8,34 @@ class: middle, center
 
 class: left
 
+# Using the Newtype Pattern for Type Safety and Abstraction
+
+---
+
+class: left
+
+# Type Aliases Create Type Synonyms
+
+---
+
+class: left
+
+# The ! Never Type that Never Returns
+
+---
+
+class: left
+
+# Dynamically Sized Types & Sized
+
+---
+
+class: left
+
+### The Sized Trait
+
+---
+
+class: left
+
 # Summary
