--- a/static/md/19.5_Advanced_Functions_and_Closures.md
+++ b/static/md/19.5_Advanced_Functions_and_Closures.md
@@ -8,4 +8,16 @@ class: middle, center
 
 class: left
 
+# Function Pointers
+
+---
+
+class: left
+
+# Returning Closures
+
+---
+
+class: left
+
 # Summary
