simple grammar fixes

--- a/static/md/3.2_Data_Types.md
+++ b/static/md/3.2_Data_Types.md
@@ -1,10 +1,11 @@
-
 class: middle, center
 
 ### 3.2
+
 # Data Types
 
 ---
+
 class: left
 
 # Types
@@ -17,13 +18,14 @@ class: left
 
   * compiler will **infer** types based on the
 
-      * `value`
+    * **value**
 
-          and
+      and
 
-      * `how it is used`
+    * **how it is used**
 
 ---
+
 class: left
 
 # Type inference
@@ -58,6 +60,7 @@ error: aborting due to previous error
 ```
 
 ---
+
 class: left
 
 # Type annotation
@@ -72,6 +75,7 @@ fn main() {
 Type annotation is provided so Rust won't complain
 
 ---
+
 class: left
 
 # Builtin Types
@@ -81,6 +85,7 @@ class: left
 * `compound`
 
 ---
+
 class: left
 
 # Scalar Types
@@ -96,6 +101,7 @@ class: left
   * characters
 
 ---
+
 class: left
 
 # integers
@@ -103,7 +109,7 @@ class: left
 Numbers with out decimal points
 
 | Length | Signed  | Unsigned |
-|--------|---------|----------|
+| ------ | ------- | -------- |
 | 8-bit  | `i8`    | `u8`     |
 | 16-bit | `i16`   | `u16`    |
 | 32-bit | `i32`   | `u32`    |
@@ -125,6 +131,7 @@ Numbers with out decimal points
 * Defaults to i32, generally the fastest, even on 64-bit systems
 
 ---
+
 class: left
 
 # floating-point numbers
@@ -148,6 +155,7 @@ fn main() {
 ```
 
 ---
+
 class: left
 
 # Numeric Operations
@@ -172,7 +180,9 @@ fn main() {
   let remainder = 43 % 5;
 }
 ```
+
 ---
+
 class: left
 
 # Boolean
@@ -191,11 +201,12 @@ fn main() {
 ```
 
 ---
+
 class: left
 
 # Characters
 
-`char` type is the language’s most primitive alphabetic type,
+`char` type is the language’s most primitive alphabetic type
 
 ```rust
 fn main() {
@@ -207,14 +218,15 @@ fn main() {
 
 * Specified with **single quotes**, as opposed to strings that use double quotes
 
-* represents a Unicode Scalar Value, which includes a lot more than just ASCII
+* Represents a Unicode Scalar Value, which includes a lot more than just ASCII
 
 * Accented letters, Chinese/Japanese/Korean ideographs, emoji, and zero width spaces
 
-* a “character” isn’t really a concept in Unicode, so your human intuition for
-  what a “character” is may not match up with what a char is in Rust
+* A **"character"** isn’t really a concept in Unicode, so your human intuition for
+  what a **"character"** is may not match up with what a **char** is in Rust
 
 ---
+
 class: left
 
 # Compound Types
@@ -226,6 +238,7 @@ class: left
   * Arrays
 
 ---
+
 class: left
 
 # Tuples
@@ -250,11 +263,12 @@ let tup = (500, 6.4, ('X', 200));
 <!-- can tuples be extended -->
 
 ---
+
 class: left
 
-# Access elements
+# Access Tuples elements
 
-Access elements by **destructuring** through pattern matching
+**destructuring** : Access elements through **pattern matching**
 
 ```rust
 fn main() {
@@ -267,7 +281,7 @@ fn main() {
 
 * Ignore the destructured values with `_`
 
-Can also Access elements with **dot notation**
+**dot notation** : Access elements through **.index**
 
 ```rust
 fn main() {
@@ -282,6 +296,7 @@ fn main() {
 ```
 
 ---
+
 class: left
 
 # Array
@@ -301,11 +316,12 @@ fn main() {
 ```
 
 ---
+
 class: left
 
-# Access elements
+# Access Array elements
 
-Access individual values in the array by `Indexing`
+Access individual values in the array by **Indexing**
 
 ```rust
 fn main() {
@@ -317,6 +333,7 @@ fn main() {
 ```
 
 ---
+
 class: left
 
 # Invalid Array Element Access
@@ -345,9 +362,11 @@ thread '<main>' panicked at 'index out of bounds: the len is 5 but the index is
  10', src/main.rs:6
 note: Run with `RUST_BACKTRACE=1` for a backtrace.
 ```
+
 <!-- ** array of arrays -->
 
 ---
+
 class: left
 
 # Summary
