--- a/static/md/3.3_How_Funcitons_Work.md
+++ b/static/md/3.3_How_Funcitons_Work.md
@@ -164,7 +164,7 @@ error[E0308]: mismatched types
 
 * Since nothing is explicitly returned an empty tuple `()` is returned
 
-* Panics with `mismatched types` error.
+* Panics with `mismatched types` error
 
 ---
 
