--- a/static/md/3.5_Control_Flow.md
+++ b/static/md/3.5_Control_Flow.md
@@ -35,7 +35,7 @@ class: left
 
 # `else` expression
 
-evalutes if the **if expression** condition is false
+Evalutes if the **if expression** condition is false
 
 ```rust
   if number < 5 {
