--- a/static/md/4.1_What_is_Ownership.md
+++ b/static/md/4.1_What_is_Ownership.md
@@ -47,7 +47,7 @@ class: left
 * On requesting, OS will find a space, mark it as used and then returns the
   address
 
-* Address is the `Pointer`
+* Address is the **Pointer**
 
 * Heap is less organized
 
@@ -100,7 +100,7 @@ class: left
 
 # Ownership Rules
 
-* Each value in Rust has a variable that’s called its **owner**
+* Each value in Rust has a variable, that’s called its **owner**
 
 * There can only be **one owner at a time**
 
@@ -114,7 +114,7 @@ class: left
 
 A scope is the range within a program for which an item is valid
 
-Rust is a block scoped language and is delimited by `{ }`
+Rust is a block scoped language and is delimited by **{ }**
 
 ```rust
 {
