--- a/static/md/4.2_References_and_Borrowing.md
+++ b/static/md/4.2_References_and_Borrowing.md
@@ -12,7 +12,7 @@ class: left
 
 Refer to some value with out taking ownership
 
-* You pass references by appending with `&`
+You can pass references by appending with **&**
 
 ```rust
 fn main() {
@@ -33,13 +33,13 @@ class: left
 
 ### &ref
 
-* arguments and parameters are prepended with `&`
+* Arguments and parameters are prepended with **&**
 
 * Since we don't have ownership
 
   * No need to return the values to give back ownership
 
-  * Rust won't `drop` the value when the variable goes out of scope
+  * Rust won't **drop** the value when the variable goes out of scope
 
 ---
 
@@ -47,11 +47,11 @@ class: left
 
 # Mutable References
 
-* mutable reference is borrowing
+* **Mutable reference is borrowing**
 
 * Like variables, references are also immutable by default
 
-* Use `mut` to make it mutable
+* Use **mut** to make it mutable
 
 ```rust
 fn main() {
@@ -166,7 +166,7 @@ fn dangle() -> &String {
 * But we tried to return a reference to it, which is pointing to an invalid
   String!
 
-* Rust won’t let us do this.
+* Rust won’t let us do this
 
 ---
 
@@ -174,9 +174,9 @@ class: left
 
 # Dereferencing
 
-* The opposite of referencing by using `&` is dereferencing
+* The opposite of referencing by using **&** is dereferencing
 
-* * is the dereference operator
+* ***** is the dereference operator
 
 ---
 
@@ -184,12 +184,12 @@ class: left
 
 # Summary
 
-* use **&** pass references to functions rather than giving ownership
+* Use **&** pass references to functions rather than giving ownership
 
 * References are also immutable by default; use **mut** to make it mutable
 
-* They has to be one mutable reference or can have multiple immutable references
-  and they have be valid refernces
+* There can be one mutable reference or multiple immutable references
+  and they all have to be valid
 
 * This fixes data race conditions and dangling references
 
