--- a/static/md/5.1_Defining_and_Instantiating_Struct.md
+++ b/static/md/5.1_Defining_and_Instantiating_Struct.md
@@ -25,12 +25,12 @@ class: left
 
 # Define a Struct
 
-* Structs are defined with `struct` keyword, follwed by name, starting
+* Structs are defined with **struct** keyword, follwed by name, starting
   with capital letter
 
 * Name should determine the significance of pieces of data grouped together
 
-* Inside `{}` we define the name and type of the peices of data called `fields`
+* Inside **{}** we define the name and type of the peices of data called `fields`
 
 ```rust
 struct User {
@@ -150,7 +150,7 @@ let user2 = User {
 };
 ```
 
-* Instance should be at the end and shouldn't have a `,` like regular fields
+Instance should be at the end and shouldn't have a **,** like regular fields
 
 ---
 
@@ -158,7 +158,11 @@ class: left
 
 # Tuple structs
 
-* Give the whole tuple a name and make it a different type than other tuples
+```rust
+struct Color(i32, i32, i32);
+```
+
+* Gives the whole tuple a name and make it a different type than other tuples
 
 * But naming each field like a regular struct would be verbose or redundant
 
