--- a/static/md/5.3_Method_Syntax.md
+++ b/static/md/5.3_Method_Syntax.md
@@ -10,8 +10,8 @@ class: left
 
 # Defining Methods
 
-Methods are similar to functions, except they’re defined within the
-context of a struct, enum or trait and their first parameter is always **&self**
+Methods are similar to functions, except they’re defined within the context of
+a struct, enum or trait and their first parameter is always **&self**
 
 * Declared with the `fn` keyword followed by name
 
@@ -54,7 +54,7 @@ class: left
 # Methods with more parameters
 
 Methods can take multiple parameters that we add to the signature after the
-self parameter, and those parameters work just like parameters in functions.
+self parameter, and those parameters work just like parameters in functions
 
 ```rust
 impl Rectangle {
@@ -100,7 +100,8 @@ let sq = Rectangle::square(3);
 
 * The funciton is namespaced by the struct
 
-* `::` is used for both Associated funcitons and the namespace created by modules
+* **::** is used for both Associated funcitons and the namespace created by
+  modules
 
 ---
 
@@ -108,11 +109,11 @@ class: left
 
 # Mutable self
 
-* `&self` by default is a immutable reference
+* **&self** by default is a immutable reference
 
-* You can use the `&mut self` to modify the object data in the method
+* **&mut self** will modify the object data in the method
 
-* You can also move the data to the method by using just `self`
+* **self** will move the data to the method
 
 ---
 
@@ -142,19 +143,19 @@ class: left
 
 # Summary
 
-* Methods are functions defined in a `impl` block with a default parameter `&self`
+* Methods are functions defined in a **impl** block with a default parameter **&self**
 
-* A struct can have multiple `impl` blocks
+* A struct can have multiple **impl** blocks
 
 * If the parameter contains...
 
-  * &self : method can use the values of the struct, but not change them
+  * **&self** : method can use the values of the struct, but not change them
 
-  * &mut self : method can modify the values
+  * **&mut self** : method can modify the values
 
-  * self : method will consume the value, which will move
+  * **self** : method will consume the value, which will move
 
-  * no self : called Associate Functions, used as "constructor"
+  * **no self** : called Associate Functions, used as "constructor"
 
 * If `&self` they are invoked with `.`
 
