--- a/static/md/6.1_Defining_an_Enum.md
+++ b/static/md/6.1_Defining_an_Enum.md
@@ -10,7 +10,7 @@ class: left
 
 # Enum
 
-`enum` also known as `enumeration`
+**enum** also known as **enumeration**
 
 * Define a type by enumerating its possible values
 
@@ -29,7 +29,7 @@ class: left
 
 # Enum Values
 
-* Instantiate enum values like this...
+Instantiate enum values like this...
 
 ```rust
 let four = IpAddrKind::V4;
