--- a/static/md/7.1_mod_and_the_Filesystem.md
+++ b/static/md/7.1_mod_and_the_Filesystem.md
@@ -14,7 +14,7 @@ Module system enables the reuse of code in an organized fashion
 
 * A module is a namespace that contains definitions of functions or types
 
-* choose whether those definitions
+* Choose whether those definitions
 
   * visible outside their module (public)
 
@@ -46,12 +46,12 @@ mod network {
 }
 ```
 
-* The `mod` keyword followd by the module name declares a new module
+* The **mod** keyword followd by the module name declares a new module
 
 * Code within the module appears either immediately following the declaration
   within curly brackets or in another file
 
-* Everything in the block `{}` is inside the namespace network
+* Everything in the block `{}` is inside the namespace of the module
 
 ---
 
@@ -142,7 +142,7 @@ mod server {
 ```
 
 * In network.rs and client.rs, no need for `mod` declaration, just provides
-  content of the the module.
+  content of the the module
 
 * Where as for server you need to declare `mod` as it is inside network.rs
 
@@ -207,15 +207,15 @@ class: left
 
 # Rules of modules with regard to files
 
-* If a module named `foo` has
+* If a module named **foo** has
 
-  * submodules : Put the declarations for foo in a file named foo/mod.rs
+  * **submodules** : Put the declarations for foo in a file named foo/mod.rs
 
-  * no submodules : Put the declarations for foo in a file named foo.rs
+  * **no submodules** : Put the declarations for foo in a file named foo.rs
 
 * These rules apply recursively
 
-* Modules should be declared in their parent module’s file using the `mod`
+* Modules should be declared in their parent module’s file using the **mod**
   keyword
 
 ---
@@ -226,8 +226,6 @@ class: left
 
 * Module provides namespaces and helps organize code
 
-<!-- * By default everything is private, use `pub` to make it public -->
-
-* `mod` declares a module and you can call it with `::`
+* **mod** declares a module and you can call the functions inside it with **::**
 
 * If a module has submodules, put the declarations in a file named foo/mod.rs
