--- a/static/md/7.2_Controlling_Visibility_with_pub.md
+++ b/static/md/7.2_Controlling_Visibility_with_pub.md
@@ -12,7 +12,7 @@ class: left
 
 * The default state of all code in Rust is private
 
-* If you don’t use a private function within your program Rust will warn that 
+* If you don’t use a private function within your program Rust will warn that
   the function is unused
 
 * When marked public, Rust will stop warning
@@ -31,12 +31,15 @@ class: left
 
 # Privacy Rules
 
-If an item is 
+If an item is
 
-    * public : Accessed by any of its parent modules
+  * **public** : Accessed by any of its parent modules
 
-    * private : Accessed only by its immediate parent module and any of the 
-      parent’s child modules
+  * **private** : Accessed only by...
+
+      * its immediate parent module and
+
+      * any of the parent’s child modules
 
 ---
 class: left
@@ -76,11 +79,11 @@ mod outermost {
 }
 fn try_me() {
     // public and accessible
-    outermost::middle_function(); 
+    outermost::middle_function();
     // not public
-    outermost::middle_secret_function(); 
+    outermost::middle_secret_function();
     // though inner fucntion is public, inside is not public
-    outermost::inside::inner_function(); 
+    outermost::inside::inner_function();
     // inner fucntion is not public and inside is also not public
     outermost::inside::secret_function();
 }
@@ -93,9 +96,14 @@ class: left
 
 * The default state of all code in Rust is private
 
-* `pub` will make the item public
+* **pub** will make the item public
 
-* If an item is public, it is accessed by any of its parent modules
+* If the item is
 
-* If an item is private, it is accessed only by its immediate parent module and 
-  any of the parent’s child modules
+  * **public** : It is accessed by any of its parent modules
+
+  * **private** : It is accessed only by
+
+      * its immediate parent module and
+
+      * any of the parent’s child modules
