--- a/static/md/8.1_Vectors.md
+++ b/static/md/8.1_Vectors.md
@@ -79,11 +79,11 @@ class: left
 } // <- v goes out of scope and is freed here
 ```
 
-* vector will be dropped when it goes out of scope
+* Vector will be dropped when it goes out of scope
 
 * When the vector gets dropped, all of its contents will also be dropped
 
-* integers vector holds will be cleaned up
+* The data, vector holds will be cleaned up
 
 ---
 
@@ -98,7 +98,7 @@ let v = vec![1, 2, 3, 4, 5];
 let third: &i32 = &v[2];
 ```
 
-* gives the reference to the element
+* Gives the reference to the element
 
 * Non existent element access will cause a panic!
 
@@ -109,9 +109,9 @@ let v = vec![1, 2, 3, 4, 5];
 let third: Option<&i32> = v.get(2);
 ```
 
-* get method with the index passed as an argument gives us Option<&T>
+* Get method with the index passed as an argument gives us **Option<&T>**
 
-* Non existent element access will return `None` without panic
+* Non existent element access will return **None** without panic
 
 ---
 
@@ -121,9 +121,11 @@ class: left
 
 When the program has a valid reference the borrow checker enforces
 
-* ownership
+* **ownership rules**
 
-* borrowing rules
+and
+
+* **borrowing rules**
 
 to ensure references to the contents of the vector remain valid
 
@@ -182,7 +184,7 @@ for i in &mut v {
 }
 ```
 
-To change the value we have to use the dereference operator (\*)
+To change the value we have to use the dereference operator *****
 
 ---
 
@@ -190,7 +192,7 @@ class: left
 
 # Using an Enum to Store Multiple Types
 
-* Vectors can only store values that are of same type
+* Vectors can only store values that are of the same type
 
 * This can be inconvenient
 
@@ -233,19 +235,19 @@ class: left
 
 # Summary
 
-* `Vector` stores more than one value
+* **Vector** stores more than one value
 
-* Created with `Vec<T>::new()` or `vec![]` macro
+* Created with **Vec<T>::new()** or **vec![]** macro
 
-* Update a vector with `.push()`
+* Update a vector with **.push()**
 
-* Read elements of a vector with `index` or `.get()`
+* Read elements of a vector with **index** or **.get()**
 
 * When referencing elements, ownership and borrowing rules are applied
 
-* You can itereate with a for loop using a reference `&` or a mutable reference
-  `&mut`
+* You can itereate with a for loop using a reference **&** or a mutable reference
+  **&mut**
 
-* Since `vec` stores only one type, you can use `enum` to store multiple
+* Since **vec** stores only one type, you can use **enum** to store multiple
 
-* If types are not known at compile time, you can use `traits`
+* If types are not known at compile time, you can use **traits**
