--- a/static/md/8.2_Strings.md
+++ b/static/md/8.2_Strings.md
@@ -57,12 +57,12 @@ class: left
 * “strings” mean the `String` and the string slice `&str` types
   not just one of those types
 
-* Both String and &str are UTF-8 encoded
+* Both `String` and `&str` are UTF-8 encoded
 
-* Std Lib also includes a number of other string types, such as
+* Std lib also includes a number of other string types, such as
   OsString, OsStr, CString, and CStr
 
-* Libraries can provide even more options
+* Crates can provide even more options
 
 ---
 
@@ -77,9 +77,6 @@ let mut s = String::new();
 Create a new empty string `s` that we can load data into
 
 ```rust
-let data = "initial contents";
-let s = data.to_string();
-// the method also works on a literal directly
 let s = "initial contents".to_string();
 ```
 
@@ -126,8 +123,6 @@ A string can
 * Grow in size
 
 * Contents can change
-
-Use `+` or the `format!` macro to concatenate string values together
 
 ---
 
@@ -230,7 +225,7 @@ let s3 = s1 + &s2;
 
 class: left
 
-# Concatenating with `+`
+# Example
 
 ```rust
 let s1 = String::from("tic");
@@ -337,7 +332,7 @@ Hindi word “नमस्ते” written in the Devanagari script is ultimate
 
 class: left
 
-# Bytes
+### Bytes
 
 * A **Vec of u8** values that looks like this
 
@@ -350,7 +345,7 @@ class: left
 
 class: left
 
-# **Unicode Scalar Values**
+### **Unicode Scalar Values**
 
 ```rust
 ['न', 'म', 'स',  '्', 'त',  'े']
@@ -364,7 +359,7 @@ class: left
 
 class: left
 
-# **grapheme clusters**
+### **grapheme clusters**
 
 ```rust
 ["न", "म", "स्", "ते"]
@@ -408,7 +403,8 @@ let hello = "Здравствуйте";
 let s = &hello[0..1];
 ```
 
-* Will panic at runtime in the same way accessing an invalid index in a vector does
+* Will panic at runtime in the same way accessing an invalid index in a vector
+  does
 
 * create string slices with caution, it can crash your program
 
