--- a/static/md/8.3_Hash_Maps.md
+++ b/static/md/8.3_Hash_Maps.md
@@ -35,7 +35,7 @@ scores.insert(String::from("Yellow"), 50);
 
 * Hash Maps store their data on the heap
 
-* Hash Maps are homogeneous
+* Hash Maps are **homogeneous**, means...
 
   * all of the keys must have the same type
 
@@ -125,7 +125,7 @@ Yellow: 50
 Blue: 10
 ```
 
-* Will print in an arbitary order
+Will print in an arbitary order
 
 ---
 
@@ -196,7 +196,7 @@ println!("{:?}", scores);
 
 * `entry` takes the key we want to check as a parameter
 
-* returns an `enum` called `Entry` that represents a value that might
+* Returns an `enum` called `Entry` that represents a value that might
   or might not exist
 
 * Update the value based on it
@@ -243,7 +243,8 @@ class: left
 * HashMap uses a cryptographically secure hashing function that can provide
   resistance to Denial of Service (DoS) attacks
 
-* If its slow, you can switch to another function by specifying a different hasher
+* If its slow, you can switch to another function by specifying a different
+  hasher
 
 * Lot of them are available in crates.io
 
@@ -259,4 +260,6 @@ class: left
 
 * Access values by `.get(<key>)` method
 
-* insert - will create if don't exist else update
+* Insert - will create if don't exist else update
+
+* Hashing Functions are customizable
