--- a/static/md/9.0_Error_Handling.md
+++ b/static/md/9.0_Error_Handling.md
@@ -10,8 +10,8 @@ class: left
 
 # Error Handling
 
-Rust requires you to acknowledge the possibility of an error occurring
-and take some action before your code compiles
+Rust requires you to acknowledge the possibility of an error occurring and take
+some action before your code compiles
 
 Two major categories
 
@@ -30,7 +30,7 @@ class: left
 * Situations in which it’s reasonable to report the problem to the user
   and retry the operation
 
-* like a file not found error
+* E.g. File not found error
 
 * Provides `Result<T, E>`
 
@@ -42,7 +42,7 @@ class: left
 
 * They are always symptoms of bugs
 
-* like trying to access a location beyond the end of an array
+* E.g. Trying to access a location beyond the end of an array
 
 * Provides `panic!` macro that stops execution on unrecoverable errors
 
