--- a/static/md/9.1_Unrecoverable_Errors_with_panic.md
+++ b/static/md/9.1_Unrecoverable_Errors_with_panic.md
@@ -26,15 +26,15 @@ class: left
 
 # Unwinding the Stack or Aborting in Response to a panic!
 
-* Unwinding
+* **Unwinding**
 
   * Rust walks back the stack and clean up the data from each function
 
   * Takes a lot of work and resulting binary will be large
 
-* Unwinding
+* **Aborting**
 
-  * Ends the program with out cleanup and OS will clean the data
+  * Ends the program without cleanup and OS will clean the data
 
   * Process will end quickly and the resulting binary will be small
 
@@ -57,7 +57,7 @@ If you want to abort on panic in release mode
 
 class: left
 
-# `panic!` intentionally
+# `panic!` Intentionally
 
 ```rust
 fn main() {
@@ -110,11 +110,11 @@ class: left
 * A backtrace is a list of all the functions that have been called to get to
   this point
 
-* set the `RUST_BACKTRACE` environment variable to get a backtrace of exactly
-  what happened to cause the error.
+* Set `RUST_BACKTRACE` environment variable to get a backtrace of exactly what
+  happened to cause the error
 
-* The key to reading the backtrace is to start from the top and read until
-  you see files you wrote
+* The key to reading the backtrace is to start from the top and read until you
+  see files you wrote
 
 * To get backtraces, debug symbols must be enabled
 
