--- a/static/md/7.3_Referring_to_Names_in_Different_Modules.md
+++ b/static/md/7.3_Referring_to_Names_in_Different_Modules.md
@@ -24,7 +24,7 @@ fn main() {
 }
 ```
 
-* Call function by fully specifying its enclosing module’s path joined by `::`
+* Call function by fully specifying its enclosing module’s path joined by **::**
 
 * Someties referring to the fully qualified name can get quite lengthy
 
@@ -50,7 +50,7 @@ fn main() {
 }
 ```
 
-* `use` keyword follwed by the enclosing module’s path brings the module into
+* **use** keyword follwed by the enclosing module’s path brings the module into
   scope
 
 * It dosen't bring the childrens of module into scope
@@ -142,13 +142,13 @@ class: left
 
 # Using super to Access a Parent Module
 
-Access root of the module using the `::` at the start
+Access root of the module using the **::** at the start
 
 ```rust
 ::client::connect();
 ```
 
-Access parent of the current module using `super::`
+Access parent of the current module using **super::**
 
 ```rust
 super::client::connect();
@@ -162,9 +162,9 @@ class: left
 
 When compared with using the root `::`
 
-* super is helpful incase of deep modules
+* Super is helpful incase of deep modules
 
-* super won't break the modules even if they are re arranged
+* Super won't break the modules even if they are rearranged
 
 ---
 
@@ -172,14 +172,14 @@ class: left
 
 # Summary
 
-* You call a function in side a module with fully qualified name 
+* You call a function in side a module with fully qualified name
   `a::series::of::nested_modules();`
 
-* `use` keyword follwed by the enclosing module’s path brings the module into
+* **use** keyword follwed by the enclosing module’s path brings the module into
   scope
 
 * Bring all the items in a namespace into scope at once using glob `*`
 
-* `::` at the begining of the path lets you access the root of the module
+* **::** at the begining of the path lets you access the root of the module
 
-* `super::` lets you access the parent directory
+* **super::** lets you access the parent directory
