--- a/static/md/8.0_Common_Collections.md
+++ b/static/md/8.0_Common_Collections.md
@@ -19,9 +19,9 @@ class: left
 * Unlike the built-in array and tuple types, the data these collections point
   to is stored on the heap, which means
 
-  * amount of data does not need to be known at compile time
+  * Amount of data does not need to be known at compile time
 
-  * can grow or shrink as the program runs
+  * Can grow or shrink as the program runs
 
 * Each kind of collection has different capabilities and costs
 
@@ -35,11 +35,11 @@ class: left
 
 The major three types of collections commonly used are...
 
-* vector: Store a variable number of values next to each other
+  * **vector** : Store a variable number of values next to each other
 
-* string: A collection of characters
+  * **string** : A collection of characters
 
-* hash map: Associate a value with a particular key
+  * **hash map** : Associate a value with a particular key
 
 ---
 
@@ -49,4 +49,4 @@ class: left
 
 * Collections can contain multiple values
 
-* vectors, strings and hash map are most famous
+* vectors, strings and hash map are the most famous
