fixed missing line

--- a/static/md/3.2_Data_Types.md
+++ b/static/md/3.2_Data_Types.md
@@ -250,6 +250,7 @@ A comma-separated list of values inside parentheses
 ```rust
 fn main() {
   let tup = (500, 6.4, 'X'); // integer, float and char
+  let (x, y, z) = tup;
   println!("The value of y is: {}", y);
 }
 ```
